templates: fix header margin on mobile

--- a/lona_picocss/static/lona-picocss/lona-picocss.css
+++ b/lona_picocss/static/lona-picocss/lona-picocss.css
@@ -42,6 +42,10 @@ header#lona-header summary svg {
         display: block;
     }
 
+    header#lona-header nav ul {
+        margin-left: 0;
+    }
+
     header#lona-header nav > ul > li {
         padding-top: calc(var(--nav-element-spacing-vertical) / 2);
         padding-left: 0;
